Regression: Sculpt Vertex Colors shown as black #92750

Closed
opened 2021-11-02 09:56:20 +01:00 by Julien Kaspar · 11 comments
Member

System Information
Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-01 19:48, hash: 75f5edcaf3
Caused by 03013d19d1

Short description of error
In the latest master the experimental sculpt vertex colors are always displayed as black, unless the object is in sculpt mode with all modifiers disabled and all shapekeys removed.

Screenshot_2021-11-02_09-49-24.png

Exact steps for others to reproduce the error

  • Enable the experimental feature "Sculpt Vertex Colors"
  • Switch the viewport shading color to "Vertex"
  • Enter sculpt mode on an obejct
  • Use the "Paint" brush tool to paint the object
  • If that isn't working, reset the brush settings in the "Brushes" tab in the sidebar
  • Go back to object mode and the object should show up as black.
**System Information** Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-01 19:48, hash: `75f5edcaf3` Caused by 03013d19d1 **Short description of error** In the latest master the experimental sculpt vertex colors are always displayed as black, unless the object is in sculpt mode with all modifiers disabled and all shapekeys removed. ![Screenshot_2021-11-02_09-49-24.png](https://archive.blender.org/developer/F11675944/Screenshot_2021-11-02_09-49-24.png) **Exact steps for others to reproduce the error** - Enable the experimental feature "Sculpt Vertex Colors" - Switch the viewport shading color to "Vertex" - Enter sculpt mode on an obejct - Use the "Paint" brush tool to paint the object - If that isn't working, reset the brush settings in the "Brushes" tab in the sidebar - Go back to object mode and the object should show up as black.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#93021 was marked as duplicate of this issue

#93021 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This is a regression.
(Introduced between 3e75f70acd7d - 8d8ce6443530)

Edit: I have attempted to bisect but getting build errors on every step so I gave up :/

This is a regression. (Introduced between `3e75f70acd7d` - `8d8ce6443530`) Edit: I have attempted to bisect but getting build errors on every step so I gave up :/
Member

Added subscriber: @Harti

Added subscriber: @Harti
Pratik Borhade changed title from Sculpt Vertex Colors shown as black to Regression: Sculpt Vertex Colors shown as black 2021-11-12 07:18:07 +01:00

Another side effect is a very very laggy viewport navigation in solid mode (at least on one of my bigger projects with over 4 million polygons).

Another side effect is a very very laggy viewport navigation in solid mode (at least on one of my bigger projects with over 4 million polygons).
Member

Added subscribers: @kevindietrich, @lichtwerk

Added subscribers: @kevindietrich, @lichtwerk
Member

Caused by 03013d19d1

CC @kevindietrich

Caused by 03013d19d1 CC @kevindietrich

This issue was referenced by 622e6f05f1

This issue was referenced by 622e6f05f1b5fb1db326dca647a2cbd56ca6b573

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2021-11-15 02:40:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92750
No description provided.