Fix T92750: sculpt vertex colors missing in object mode

The layers were not aliased properly for usage in the shaders.

Regression caused by rB03013d19d167.